fix: appoinment page height, scrollbar etc...

--- a/apps/gauzy/src/app/pages/employees/appointment/manage-appointment/manage-appointment.component.scss
+++ b/apps/gauzy/src/app/pages/employees/appointment/manage-appointment/manage-appointment.component.scss
@@ -3,14 +3,14 @@
 @include nb-install-component {
   .item-invalid {
     ::ng-deep .ng-select-container {
-      border: 1px solid;
+      border: 1px solid red;
       border-color: nb-theme(color-danger-default);
     }
   }
 
   .item-valid {
     ::ng-deep .ng-select-container {
-      border: 1px solid;
+      border: 1px solid green;
       border-color: nb-theme(color-success-default);
     }
   }
